k8s/app-central-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-central
  labels:
    app: app-central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-central  
  template:
    metadata:
      labels:
        app: app-central
    spec:
      serviceAccountName: snapcast-account
      containers:
        - name: app-central
          image: mrpauloii/snapcast-central:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
