k8s/app-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:4.0.0
          ports:
            - containerPort: 9092
            - containerPort: 9101
          volumeMounts:
            - name: kafka-storage
              mountPath: /tmp/kraft-combined-logs
      volumes:
      - name: kafka-storage
        emptyDir: {}
