k8s/app-processamento-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-processamento
  labels:
    app: app-processamento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-processamento
  template:
    metadata:
      labels:
        app: app-processamento
    spec:
      containers:
        - name: app-processamento
          image: mrpauloii/snapcast-processamento:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
