k8s/app-upload-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-upload
  labels:
    app: app-upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-upload
  template:
    metadata:
      labels:
        app: app-upload
    spec:
      containers:
        - name: app-upload
          image: mrpauloii/snapcast-upload:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
