k8s/service-app-central.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-central
  labels:
    monitoring: enabled
spec:
  selector:
    app: app-central
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
