k8s/service-app-upload.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-upload
spec:
  selector:
    app: app-upload
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
