k8s/service-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-client
      port: 9092
      targetPort: 9092
      protocol: TCP
    - name: kafka-monitoring
      port: 9101
      targetPort: 9101
      protocol: TCP
  type: ClusterIP
