k8s/tempo-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
spec:
  selector:
    app: tempo
  ports:
    - name: http
      port: 3200
      targetPort: 3200
    - name: otlp-http
      port: 4318
      targetPort: 4318
