k8s/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /central
            pathType: Prefix
            backend:
              service:
                name: app-service-central
                port:
                  number: 80
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: app-service-upload
                port:
                  number: 80
